// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Ratings component should render 4.3 of 5 highlight icons 1`] = `
<div
  className="ratings"
>
  <div
    className="ratings__background layout layout--align-middle layout--gutter-xs"
  >
    <div
      className="layout__item u-fit"
      key="0"
    >
      <Icon(HighlightIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="1"
    >
      <Icon(HighlightIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="2"
    >
      <Icon(HighlightIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="3"
    >
      <Icon(HighlightIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="4"
    >
      <Icon(HighlightIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
  </div>
  <div
    className="ratings__foreground"
    style={
      Object {
        "width": "86%",
      }
    }
  >
    <div
      className="ratings__foreground-icon"
      key="0"
    >
      <Icon(HighlightIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="1"
    >
      <Icon(HighlightIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="2"
    >
      <Icon(HighlightIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="3"
    >
      <Icon(HighlightIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="4"
    >
      <Icon(HighlightIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
  </div>
</div>
`;

exports[`The Ratings component should render a third of 10 approved icons 1`] = `
<div
  className="ratings"
>
  <div
    className="ratings__background layout layout--align-middle layout--gutter-xs"
  >
    <div
      className="layout__item u-fit"
      key="0"
    >
      <Icon(ApprovedIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="1"
    >
      <Icon(ApprovedIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="2"
    >
      <Icon(ApprovedIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="3"
    >
      <Icon(ApprovedIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="4"
    >
      <Icon(ApprovedIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="5"
    >
      <Icon(ApprovedIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="6"
    >
      <Icon(ApprovedIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="7"
    >
      <Icon(ApprovedIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="8"
    >
      <Icon(ApprovedIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="9"
    >
      <Icon(ApprovedIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
  </div>
  <div
    className="ratings__foreground"
    style={
      Object {
        "width": "33.333333333333336%",
      }
    }
  >
    <div
      className="ratings__foreground-icon"
      key="0"
    >
      <Icon(ApprovedIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="1"
    >
      <Icon(ApprovedIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="2"
    >
      <Icon(ApprovedIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="3"
    >
      <Icon(ApprovedIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="4"
    >
      <Icon(ApprovedIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="5"
    >
      <Icon(ApprovedIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="6"
    >
      <Icon(ApprovedIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="7"
    >
      <Icon(ApprovedIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="8"
    >
      <Icon(ApprovedIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
    <div
      className="ratings__foreground-icon"
      key="9"
    >
      <Icon(ApprovedIcon)
        borderColor="orange"
        color="orange"
        size="sm"
      />
    </div>
  </div>
</div>
`;

exports[`The Ratings component should render only background if the rating is null 1`] = `
<div
  className="ratings"
>
  <div
    className="ratings__background layout layout--align-middle layout--gutter-xs"
  >
    <div
      className="layout__item u-fit"
      key="0"
    >
      <Icon(HighlightIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="1"
    >
      <Icon(HighlightIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="2"
    >
      <Icon(HighlightIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="3"
    >
      <Icon(HighlightIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
    <div
      className="layout__item u-fit"
      key="4"
    >
      <Icon(HighlightIcon)
        borderColor="grey"
        color="grey"
        size="sm"
      />
    </div>
  </div>
</div>
`;
